# cmake-demo

./: .gitignore  CMakeLists.txt  ReadMe.md  main.cpp
Math/: CMakeLists.txt  math.cpp  math.hpp
